--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <div class="container">
             <h1>Hi, I'm <span>Abhay</span></h1>
-            <p>[Your Profession] | [Your Tagline]</p>
+            <p> Design and Verification Enginner | UVM and System Verilog Expert </p>
         </div>
     </header>
     
@@ -33,9 +33,9 @@
         <section id="skills">
             <h2>Skills</h2>
             <ul>
-                <li>Programming Languages: HTML, CSS, JavaScript, Python</li>
-                <li>Frameworks: React, Node.js</li>
-                <li>Tools: Git, Docker, VS Code</li>
+                <li>Programming Languages: System Verilog, UVM, JavaScript, Python</li>
+                <li>Frameworks: UVM</li>
+                <li>Tools: VCS, Xcelium, Vmanager</li>
                 <li>Soft Skills: Communication, Problem-Solving, Leadership</li>
             </ul>
         </section>
