--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <section id="contact">
             <h2>Contact</h2>
             <p>Email: <a href="abhay.work.space@gmail.com">your.email@example.com</a></p>
-            <p>LinkedIn: <a href="https://https://www.linkedin.com/in/abhay-singh-bb949936/" target="_blank">linkedin.com/in/username</a></p>
+            <p>LinkedIn: <a href="https://www.linkedin.com/in/abhay-singh-bb949936/" target="_blank">linkedin.com/in/abhay-singh-bb949936</a></p>
             <p>GitHub: <a href="https://github.com/username" target="_blank">github.com/username</a></p>
         </section>
     </main>
